erDiagram

    ROL {
        INT id_rol PK
        VARCHAR nombre_rol UK
        VARCHAR descripcion
    }

    USUARIO {
        VARCHAR id_usuario PK
        VARCHAR nombre_usuario UK
        VARCHAR apellido_usuario
        VARCHAR contrasena
        VARCHAR estado
        INT id_rol FK
    }

    PERIODO_ACADEMICO {
        INT id_periodo PK
        VARCHAR nombre_periodo UK
        DATE fecha_inicio
        DATE fecha_fin
        VARCHAR estado
    }

    CURSO {
        INT id_curso PK
        VARCHAR codigo_curso UK
        VARCHAR nombre_curso
        VARCHAR descripcion
        VARCHAR estado
        INT id_periodo FK
        VARCHAR id_instructor FK
    }

    MATRICULA {
        INT id_matricula PK
        DATE fecha_matricula
        VARCHAR estado_Matricula
        VARCHAR id_estudiante FK
        INT id_curso FK
    }

    MATERIAL_DIDACTICO {
        INT id_material PK
        VARCHAR titulo_material
        VARCHAR ruta_archivo
        DATE fecha_subida
        INT id_curso FK
    }

    ACTIVIDAD_EVALUATIVA {
        INT id_actividad PK
        VARCHAR nombre_actividad
        VARCHAR descripcion
        DATE fecha_limite
        DECIMAL ponderacion
        INT id_curso FK
    }

    ENTREGA_EVALUACION {
        INT id_entrega PK
        VARCHAR ruta_archivo_entrega
        DATE fecha_entrega
        DECIMAL calificacion
        VARCHAR observaciones
        INT id_actividad FK
        VARCHAR id_estudiante FK
    }

    PAGO {
        INT id_pago PK
        DECIMAL monto
        DATE fecha_pago
        VARCHAR ruta_comprobante
        VARCHAR estado_pago
        VARCHAR id_estudiante FK
        VARCHAR id_asesor_validador FK
    }

    FACTURA {
        INT id_factura PK
        VARCHAR numero_factura UK
        DATE fecha_emision
        DECIMAL monto_total
        INT id_pago FK
        VARCHAR id_estudiante FK
    }

    SESION {
        INT id_sesion PK
        DATETIME fecha_inicio
        DATETIME fecha_fin
        BOOLEAN activa
        VARCHAR id_usuario FK
    }


    ROL ||--o{ USUARIO : asigna

    PERIODO_ACADEMICO ||--o{ CURSO : contiene

    USUARIO o|--o{ CURSO : imparte

    USUARIO ||--o{ MATRICULA : realiza
    CURSO ||--o{ MATRICULA : recibe

    CURSO ||--o{ MATERIAL_DIDACTICO : contiene

    CURSO ||--o{ ACTIVIDAD_EVALUATIVA : contiene

    ACTIVIDAD_EVALUATIVA ||--o{ ENTREGA_EVALUACION : recibe
    USUARIO ||--o{ ENTREGA_EVALUACION : realiza

    USUARIO ||--o{ PAGO : realiza
    USUARIO o|--o{ PAGO : valida

    PAGO ||--o| FACTURA : genera
    USUARIO ||--o{ FACTURA : pertenece

    USUARIO ||--o{ SESION : inicia